--- a/.classpath
+++ b/.classpath
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry including="**/*.java" kind="src" path="src"/>
-	<classpathentry kind="lib" path="deps/bsh-2.0b4.jar"/>
-	<classpathentry kind="lib" path="deps/cssparser-0.9.5.jar"/>
-	<classpathentry kind="lib" path="deps/guava-r09.jar"/>
-	<classpathentry kind="lib" path="deps/htmlunit-2.9.jar"/>
-	<classpathentry kind="lib" path="deps/htmlunit-core-js-2.9.jar"/>
-	<classpathentry kind="lib" path="deps/httpclient-4.1.2.jar"/>
-	<classpathentry kind="lib" path="deps/httpcore-4.1.2.jar"/>
-	<classpathentry kind="lib" path="deps/httpmime-4.1.2.jar"/>
-	<classpathentry kind="lib" path="deps/jcommander-1.12.jar"/>
-	<classpathentry kind="lib" path="deps/jna-3.3.0.jar"/>
-	<classpathentry kind="lib" path="deps/json-20080701.jar"/>
-	<classpathentry kind="lib" path="deps/nekohtml-1.9.15.jar"/>
-	<classpathentry kind="lib" path="deps/sac-1.3.jar"/>
-	<classpathentry kind="lib" path="deps/selenium-android-driver-2.5.0.jar"/>
-	<classpathentry kind="lib" path="deps/selenium-api-2.5.0.jar"/>
-	<classpathentry kind="lib" path="deps/selenium-chrome-driver-2.5.0.jar"/>
-	<classpathentry kind="lib" path="deps/selenium-firefox-driver-2.5.0.jar"/>
-	<classpathentry kind="lib" path="deps/selenium-htmlunit-driver-2.5.0.jar"/>
-	<classpathentry kind="lib" path="deps/selenium-ie-driver-2.5.0.jar"/>
-	<classpathentry kind="lib" path="deps/selenium-iphone-driver-2.5.0.jar"/>
-	<classpathentry kind="lib" path="deps/selenium-java-2.5.0.jar"/>
-	<classpathentry kind="lib" path="deps/selenium-remote-driver-2.5.0.jar"/>
-	<classpathentry kind="lib" path="deps/selenium-support-2.5.0.jar"/>
-	<classpathentry kind="lib" path="deps/serializer-2.7.1.jar"/>
-	<classpathentry kind="lib" path="deps/testng-6.0.1.jar"/>
-	<classpathentry kind="lib" path="deps/xalan-2.7.1.jar"/>
-	<classpathentry kind="lib" path="deps/xercesImpl-2.9.1.jar"/>
-	<classpathentry kind="lib" path="deps/xml-apis-1.3.04.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
+	<classpathentry kind="lib" path="lib/bsh-2.0b4.jar"/>
+	<classpathentry kind="lib" path="lib/cssparser-0.9.5.jar"/>
+	<classpathentry kind="lib" path="lib/guava-r09.jar"/>
+	<classpathentry kind="lib" path="lib/htmlunit-2.9.jar"/>
+	<classpathentry kind="lib" path="lib/htmlunit-core-js-2.9.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/httpmime-4.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/jcommander-1.12.jar"/>
+	<classpathentry kind="lib" path="lib/jna-3.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/json-20080701.jar"/>
+	<classpathentry kind="lib" path="lib/nekohtml-1.9.15.jar"/>
+	<classpathentry kind="lib" path="lib/sac-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-android-driver-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-api-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-chrome-driver-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-firefox-driver-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-htmlunit-driver-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-ie-driver-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-iphone-driver-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-remote-driver-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-support-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/serializer-2.7.1.jar"/>
+	<classpathentry kind="lib" path="lib/testng-6.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/xalan-2.7.1.jar"/>
+	<classpathentry kind="lib" path="lib/xercesImpl-2.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/xml-apis-1.3.04.jar"/>
 	<classpathentry kind="output" path="tmp/eclipse/classes"/>
 </classpath>
