--- a/.classpath
+++ b/.classpath
@@ -3,28 +3,31 @@
 	<classpathentry including="**/*.java" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="lib" path="lib/bsh-2.0b4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-exec-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/cssparser-0.9.5.jar"/>
-	<classpathentry kind="lib" path="lib/guava-r09.jar"/>
+	<classpathentry kind="lib" path="lib/guava-11.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/htmlunit-2.9.jar"/>
 	<classpathentry kind="lib" path="lib/htmlunit-core-js-2.9.jar"/>
 	<classpathentry kind="lib" path="lib/httpclient-4.1.2.jar"/>
-	<classpathentry kind="lib" path="lib/httpcore-4.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/httpmime-4.1.2.jar"/>
 	<classpathentry kind="lib" path="lib/jcommander-1.12.jar"/>
-	<classpathentry kind="lib" path="lib/jna-3.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/jna-3.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/json-20080701.jar"/>
+	<classpathentry kind="lib" path="lib/jsr305-1.3.9.jar"/>
 	<classpathentry kind="lib" path="lib/nekohtml-1.9.15.jar"/>
+	<classpathentry kind="lib" path="lib/platform-3.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/sac-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-android-driver-2.5.0.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-api-2.5.0.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-chrome-driver-2.5.0.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-firefox-driver-2.5.0.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-htmlunit-driver-2.5.0.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-ie-driver-2.5.0.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-iphone-driver-2.5.0.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-java-2.5.0.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-remote-driver-2.5.0.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-support-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-android-driver-2.20.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-api-2.20.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-chrome-driver-2.20.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-firefox-driver-2.20.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-htmlunit-driver-2.20.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-ie-driver-2.20.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-iphone-driver-2.20.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.20.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-remote-driver-2.20.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-support-2.20.0.jar"/>
 	<classpathentry kind="lib" path="lib/serializer-2.7.1.jar"/>
 	<classpathentry kind="lib" path="lib/testng-6.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/xalan-2.7.1.jar"/>
